login and registration

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>
-          studentlivespupportportal
+    <meta charset="utf-8">  
+    <title>
+          studentlivesupportportal
       </title>
-      studentlivespupportportal
+      studentlivesupportportal
     <style>
-      studentlivespupportportal
+      studentlivesupportportal
       h2 {
         color: blueviolet;
       }
@@ -14,6 +15,11 @@
   </head>
 
   <body>
-    Die erschde Website für Studenten!!
+    <h1>Die erschde Website für Studenten!!</h1>
+    <h2>Login</h2>
+    <p>Du besitzt noch keinen Account? Hier geht's </p>
+    <a href = "registrierung.html">zur Registrierung!</a>
+    <h3>Aktuelle Infos zu den Corona-Regelungen an deinem Studienstandort</h3>
+    <img src="C:\Users\laura\OneDrive\Pictures/corona-pixabay.jpg" alt="Viren">
   </body>
 </html>
