--- a/Frontend/registrierung.html
+++ b/Frontend/registrierung.html
@@ -57,6 +57,32 @@
               </td>
             </tr>
             <tr>
+              <td align="right">Passwort*:</td>
+              <td>
+                <input
+                  id="passwd"
+                  maxlength="80"
+                  name="Passwort"
+                  size="45"
+                  type="password"
+                  placeholder="z. B. 7%csdz?T{G4x]"
+                />
+              </td>
+            </tr>
+            <tr>
+              <td align="right">Passwort wiederholen*:</td>
+              <td>
+                <input
+                  id="passwd"
+                  maxlength="80"
+                  name="PasswortWiederholt"
+                  size="45"
+                  type="password"
+                  placeholder="z. B. 7%csdz?T{G4x]"
+                />
+              </td>
+            </tr>
+            <tr>
               <td align="right">Matrikelnummer*:</td>
               <td>
                 <input
@@ -67,11 +93,16 @@
                 />
               </td>
             </tr>
-            <p>Durch Angabe Deiner Matrikelnummer wird sichergestellt, dass Du tatsächlich studierst und folglich zur
-                Nutzung des studentlivesupportportal befugt bist.
+            <p>
+              Durch Angabe Deiner Matrikelnummer wird sichergestellt, dass Du
+              tatsächlich studierst und folglich zur Nutzung des
+              studentlivesupportportal befugt bist.
             </p>
-            <p>Durch Angabe Deiner PLZ können Dir automatisch zu deinem Studienstandort passende
-                Informationen und Angebote vorgeschlagen werden.</p>
+            <p>
+              Durch Angabe Deiner PLZ können Dir automatisch zu deinem
+              Studienstandort passende Informationen und Angebote vorgeschlagen
+              werden.
+            </p>
             <p>Alle mit * markierte Felder sind Pflicht-Felder.</p>
             <tr>
               <td></td>
@@ -83,6 +114,5 @@
         </table>
       </form>
     </div>
-    
   </body>
 </html>
