--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -633,7 +633,7 @@
       </p>
     </center>
     <div id="cookiedingsbums"><div>
-      <span>Ja, auch diese Webseite verwendet Cookies. </span> 
+      <span>Diese Website verwendet Cookies. </span> 
       <a href="http://xxx.euredomain.de/euredatenschutzseite">Hier erfahrt ihr alles zum Datenschutz</a></div>
      <span id="cookiedingsbumsCloser" onclick="document.cookie = 'hidecookiedingsbums=1;path=/';jQuery('#cookiedingsbums').slideUp()">&#10006;</span>
     </div>
