--- a/Frontend/registrierung.html
+++ b/Frontend/registrierung.html
@@ -53,7 +53,7 @@
             <tr>
               <td align="right">Email*:</td>
               <td>
-                <input maxlength="80" name="Email" size="45" type="text" />
+                <input maxlength="80" name="Email" size="45" type="email" />
               </td>
             </tr>
             <tr>
