--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -21,10 +21,12 @@
 
                 <label for= "Username">Username: </label>
                 <input type="text" id="Username" name="Username required">
-
+                    <br>
+                    <br>
                 <label for= "Passwort">Passwort: </label>
                 <input type="text" id="Passwort" name="Passwort required">
-            
+                    <br>
+                <button>Log In!</button>
 
 
 
